--- a/java/.recommenders/caches/identified-project-coordinates.json
+++ b/java/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"/home/martina/Desktop/Smart Radar/SmartRadar/java/Centralina","type":"PROJECT","hints":{"PROJECT_NAME":"Centralina"}},"ABSENT"]]
