--- a/java/Centralina/.classpath
+++ b/java/Centralina/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="lib" path="lib/dio.jar"/>
 	<classpathentry kind="lib" path="lib/pi4j-core-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/pi4j-core-sources.jar"/>
@@ -19,10 +19,7 @@
 	<classpathentry kind="lib" path="lib/pi4j-service-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/pi4j-service-sources.jar"/>
 	<classpathentry kind="lib" path="lib/pi4j-service.jar"/>
-	<classpathentry kind="lib" path="lib/RXTXcomm.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Centralina/lib/native"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="/usr/lib/jni"/>
+	<classpathentry kind="lib" path="/usr/share/java/RXTXcomm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
